--- a/capputeeno/package.json
+++ b/capputeeno/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.1",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "next": "12.2.3",
