--- a/capputeeno/package.json
+++ b/capputeeno/package.json
@@ -28,6 +28,7 @@
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
     "postcss": "^8.4.14",
+    "prettier": "^2.8.1",
     "tailwindcss": "^3.1.7",
     "typescript": "4.7.4"
   }
