--- a/capputeeno/package.json
+++ b/capputeeno/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
