--- a/capputeeno/package.json
+++ b/capputeeno/package.json
@@ -14,7 +14,7 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
-    "next": "13.4.16",
+    "next": "^13.4.18",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.7",
