--- a/capputeeno/package.json
+++ b/capputeeno/package.json
@@ -10,9 +10,11 @@
     "fix": "npx eslint --fix"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.33.0",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.5.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "react": "18.2.0",
