--- a/capputeeno/package.json
+++ b/capputeeno/package.json
@@ -19,6 +19,7 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.0.7",
     "typescript": "5.2.2"
   },
